--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
 .link {
   color: brown;
+  margin: 10px;
+  padding: 4px;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 body {
-  background-color: gray;
-  color: blue;
+  background-color: rgb(55, 52, 52);
+  color: rgb(255, 255, 255);
+  margin: 20px;
+  padding: 15px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+h1 {
+  color: brown;
+}
+h1 {
+  color: rgb(105, 22, 93);
 }
