--- a/style.css
+++ b/style.css
@@ -1,17 +1,11 @@
-.link {
-  color: brown;
-  margin: 10px;
-  padding: 4px;
-  border: 2px solid black;
-  border-radius: 10px;
+* {
+  padding: auto;
+  margin: auto;
+  border: 1px solid blue;
 }
 body {
   background-color: rgb(55, 52, 52);
   color: rgb(255, 255, 255);
-  margin: 20px;
-  padding: 15px;
-  border: 2px solid black;
-  border-radius: 10px;
 }
 h1 {
   color: brown;
