--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 * {
   padding: auto;
   margin: auto;
-  border: 1px solid blue;
+  border: 3px solid blue;
 }
 body {
   background-color: rgb(55, 52, 52);
   color: rgb(255, 255, 255);
 }
 h1 {
-  color: brown;
+  color: rgb(138, 74, 74);
 }
 h1 {
   color: rgb(105, 22, 93);
